Overlap now correctly determines placement of events and places events into the first available free space when stacked.

--- a/sandbox/mosen/gallery-dp-timeline/assets/gallery-dp-timeline-core.css
+++ b/sandbox/mosen/gallery-dp-timeline/assets/gallery-dp-timeline-core.css
@@ -53,9 +53,9 @@
     font-weight: bold;
 
     border-style: solid;
-    border-width: 0px 2px 2px 0px;
-    border-color: #0074a5;
-    border-radius: 4px 0px 4px 0px;
+    border-width: 1px;
+    border-color: #2ea4c5 #0074a5 #0074a5 #2ea4c5;
+    border-radius: 2px 0px 2px 0px;
     
     background-color: #0e84b5;
     color: #EEEEEE;
